Improved performance, bug fixes, additional featuers

--- a/var/clide.conf
+++ b/var/clide.conf
@@ -3,7 +3,7 @@
 #1st # = Overflow
 #2nd # = Additional features
 #3rd # = Bug/code tweaks/fixes
-Version=0.77.36
+Version=0.78.39
 
 #cl[ide] config
 #{
@@ -22,3 +22,16 @@ repoAssist=True
 
 #root dir
 ProgDir=~/Programs
+
+#Languages
+#<Lang>=<compiler>
+#<Lang>=<intepreter>
+#<Lang>=<compiler>,<intepreter>
+Bash=bash
+C++=g++
+Go=go
+Java=javac,java
+Python=python
+Perl=perl
+Ruby=ruby
+
