--- a/var/clide.conf
+++ b/var/clide.conf
@@ -30,6 +30,7 @@ ProgDir=~/Programs
 #<Lang>=<compiler>,<intepreter>
 Use(Bash)=bash
 Use(C++)=g++
+Use(C)=gcc
 Use(Go)=go
 Use(Java)=javac,java
 Use(Python)=python
@@ -40,6 +41,7 @@ Use(Ruby)=ruby
 #MUST be located in <language>/src/ and compiled by clide
 New(Bash)=newBash.sh
 New(C++)=newC++.cpp
+#New(C)=newC.c
 New(Go)=newGo.go
 New(Java)=newJava.jar
 New(Python)=newPython.py
