""Code refactored and performance improved""

--- a/var/clide.conf
+++ b/var/clide.conf
@@ -1,51 +1,71 @@
 #cl[ide] colors
 #{
-VerColor=1
-IDEcolor=1
-CLcolor=4
-BKTcolor=4
+export VerColor=1
+export IDEcolor=1
+export CLcolor=4
+export BKTcolor=4
 #}
 
 #cl[ide] config
 #{
-editor=nano
-ReadBy=less
-repoTool=git
-#repoTool=svn
+export editor=nano
+export ReadBy=less
+export repoTool=git
+#export repoTool=svn
 
 #Repo assist is for simplistic commands
 #True = cl[ide] takes care of repo commands
-repoAssist=True
+export repoAssist=True
 #False = User handles repo commands
 #repoAssist="False"
 #Repo mangement is neither run by user nor cl[ide]
 #repoAssist=
 
 #root dir
-ProgDir=~/Programs
+export ProgDir=~/Programs
+export ClideDir=${root}
+export ModesDir=${ClideDir}/modes
+export NotesDir=${ClideDir}/notes
+export LibDir=${ClideDir}/lib
+export VarDir=${ClideDir}/var
+export LangsDir=${ClideDir}/langs
+export ClideProjectDir=${ClideDir}/projects
+export ActiveProjectDir=${ClideProjectDir}/Active
+export TemplateProjectDir=${ClideProjectDir}/Templates
+
+#Global Vars (DO NOT CHANGE)
+#{
+export CodeProject="none"
+export ProjectMode="main"
+export ProjectType="Generic"
+export RunTimeArgs=""
+export RunCplArgs="none"
+#}
 
 #Languages
+#{
 #<Lang>=<compiler>
 #<Lang>=<intepreter>
 #<Lang>=<compiler>,<intepreter>
-Use(Bash)=bash
-Use(C++)=g++
-Use(C)=gcc
-Use(Go)=go
-Use(Java)=javac,java
-Use(Python)=python
-Use(Perl)=perl
-Use(Ruby)=ruby
+export UseBash=bash
+export UseCpp=g++
+export UseC=gcc
+export UseGo=go
+export UseJava=javac,java
+export UsePython=python
+export UsePerl=perl
+export UseRuby=ruby
+#}
 
 #Code Template
 #MUST be located in <language>/src/ and compiled by clide
-New(Bash)=newBash.sh
-New(C++)=newC++.cpp
-#New(C)=newC.c
-New(Go)=newGo.go
-New(Java)=newJava.jar
-New(Python)=newPython.py
-New(Perl)=newPerl.pl
-New(Ruby)=newRuby.rb
+export NewBash=newBash.sh
+export NewCpp=newC++.cpp
+#export NewC=newC.c
+export NewGo=newGo.go
+export NewJava=newJava.jar
+export NewPython=newPython.py
+export NewPerl=newPerl.pl
+export NewRuby=newRuby.rb
 
 #}
