--- a/var/clide.conf
+++ b/var/clide.conf
@@ -52,7 +52,7 @@ export UseCpp=g++
 export UseC=gcc
 export UseGo=go
 export UseJava=javac,java
-export UsePython=python3
+export UsePython=python
 export UsePerl=perl
 export UseRuby=ruby
 #}
