Adding "no-lang" functionalty

--- a/var/clide.conf
+++ b/var/clide.conf
@@ -61,7 +61,7 @@ export UseRuby=ruby
 #MUST be located in <language>/src/ and compiled by clide
 export NewBash=newBash.sh
 export NewCpp=newC++.cpp
-#export NewC=newC.c
+export NewC=newC.c
 export NewGo=newGo.go
 export NewJava=newJava.jar
 export NewPython=newPython.py
