Enabling creation of custom new source code templates

--- a/var/clide.conf
+++ b/var/clide.conf
@@ -29,6 +29,7 @@ export NotesDir=${ClideDir}/notes
 export LibDir=${ClideDir}/lib
 export VarDir=${ClideDir}/var
 export LangsDir=${ClideDir}/langs
+export NewCodeDir=${ClideDir}/newCode
 export ClideProjectDir=${ClideDir}/projects
 export ActiveProjectDir=${ClideProjectDir}/Active
 export TemplateProjectDir=${ClideProjectDir}/Templates
