compiler/interpreter bugfix

--- a/var/clide.conf
+++ b/var/clide.conf
@@ -48,14 +48,14 @@ export RunCplArgs="none"
 #<Lang>=<compiler>
 #<Lang>=<intepreter>
 #<Lang>=<compiler>,<intepreter>
-export UseBash=bash
-export UseCpp=g++
-export UseC=gcc
-export UseGo=go
-export UseJava=javac,java
-export UsePython=python
-export UsePerl=perl
-export UseRuby=ruby
+export cplBash=bash
+export cplCpp=g++
+export cplC=gcc
+export cplGo=go
+export cplJava=javac,java
+export cplPython=python
+export cplPerl=perl
+export cplRuby=ruby
 #}
 
 #Code Template
