--- a/var/clide.conf
+++ b/var/clide.conf
@@ -53,7 +53,7 @@ export cplCpp=g++
 export cplC=gcc
 export cplGo=go
 export cplJava=javac,java
-export cplPython=python
+export cplPython=python3
 export cplPerl=perl
 export cplRuby=ruby
 #}
