bug fixes; improved project handling

--- a/var/clide.conf
+++ b/var/clide.conf
@@ -12,6 +12,7 @@ export editor=nano
 export ReadBy=less
 export repoTool=git
 #export repoTool=svn
+export Debugger=gdb
 
 #Repo assist is for simplistic commands
 #True = cl[ide] takes care of repo commands
