Adding Debugging to C/C++, Python, and Java.

--- a/var/clide.conf
+++ b/var/clide.conf
@@ -12,7 +12,6 @@ export editor=nano
 export ReadBy=less
 export repoTool=git
 #export repoTool=svn
-export Debugger=gdb
 
 #Repo assist is for simplistic commands
 #True = cl[ide] takes care of repo commands
@@ -69,5 +68,13 @@ export NewJava=newJava.jar
 export NewPython=newPython.py
 export NewPerl=newPerl.pl
 export NewRuby=newRuby.rb
+
+#debuggers
+#C/C++
+export debugCandCpp=gdb
+#Python
+export debugPython=pdb
+#Java
+export debugJava=jdb
 
 #}
