refactored code; compile improvements; preselect multiple source files; bug fixes

--- a/var/clide.conf
+++ b/var/clide.conf
@@ -69,4 +69,12 @@ export NewPython=newPython.py
 export NewPerl=newPerl.pl
 export NewRuby=newRuby.rb
 
+#debuggers
+#C/C++
+export debugCandCpp=gdb
+#Python
+export debugPython=pdb
+#Java
+export debugJava=jdb
+
 #}
