begun supportting different file extensions for C++; code refactoring

--- a/var/clide.conf
+++ b/var/clide.conf
@@ -58,16 +58,27 @@ export cplPerl=perl
 export cplRuby=ruby
 #}
 
+#Extensions
+#This section is for langauges that contain more than one file extension
+#Empty/Incorrect file extensions will revert back to pre-set extensions
+#
+#Warning! any source code NOT containing the following extension MAY NOT FUNCTION CORRECTLY
+#{
+#export extCppSrc=.cc
+#export extCppHead=.hh
+#}
+
 #Code Template
-#MUST be located in <language>/src/ and compiled by clide
-export NewBash=newBash.sh
-export NewCpp=newC++.cpp
-export NewC=newC.c
-export NewGo=newGo.go
-export NewJava=newJava.jar
-export NewPython=newPython.py
-export NewPerl=newPerl.pl
-export NewRuby=newRuby.rb
+#MUST be compiled by clide
+#extensions are optional
+export NewBash=newBash
+export NewCpp=newC++
+export NewC=newC
+export NewGo=newGo
+export NewJava=newJava
+export NewPython=newPython
+export NewPerl=newPerl
+export NewRuby=newRuby
 
 #debuggers
 #C/C++
