Improved C++ source file handling; code refactoring; can add code after a 2nd 'set <src>'; bugfixes

--- a/var/clide.conf
+++ b/var/clide.conf
@@ -58,14 +58,14 @@ export cplPerl=perl
 export cplRuby=ruby
 #}
 
-#Extensions
+#Default Extension
 #This section is for langauges that contain more than one file extension
 #Empty/Incorrect file extensions will revert back to pre-set extensions
 #
 #Warning! any source code NOT containing the following extension MAY NOT FUNCTION CORRECTLY
 #{
-#export extCppSrc=.cc
-#export extCppHead=.hh
+#export CppSrcExt=.cc
+#export CppHeadExt=.hh
 #}
 
 #Code Template
