begun adding the removal/deletion of projects; fixed C++ project functionality; bug fixes

--- a/var/clide.conf
+++ b/var/clide.conf
@@ -64,7 +64,7 @@ export cplRuby=ruby
 #
 #Warning! any source code NOT containing the following extension MAY NOT FUNCTION CORRECTLY
 #{
-#export CppSrcExt=.cc
+export CppSrcExt=.cc
 #export CppHeadExt=.hh
 #}
 
