Added Support for Rust Language

--- a/var/clide.conf
+++ b/var/clide.conf
@@ -56,6 +56,7 @@ export cplJava=javac,java
 export cplPython=python
 export cplPerl=perl
 export cplRuby=ruby
+export cplRust=rustc
 #}
 
 #Default Extension
@@ -79,6 +80,7 @@ export NewJava=newJava
 export NewPython=newPython
 export NewPerl=newPerl
 export NewRuby=newRuby
+export NewRust=newRust
 
 #debuggers
 #C/C++
