added 'import' and 'export' of clide projects; introduced distro package managing; bugfixes

--- a/var/clide.conf
+++ b/var/clide.conf
@@ -32,6 +32,8 @@ export LangsDir=${ClideDir}/langs
 export NewCodeDir=${ClideDir}/newCode
 export ClideProjectDir=${ClideDir}/projects
 export ActiveProjectDir=${ClideProjectDir}/Active
+export ExportProjectDir=${ClideProjectDir}/Exports
+export ImportProjectDir=${ClideProjectDir}/Imports
 export TemplateProjectDir=${ClideProjectDir}/Templates
 
 #Global Vars (DO NOT CHANGE)
