"UI and config changes"

--- a/var/clide.conf
+++ b/var/clide.conf
@@ -40,6 +40,7 @@ export TemplateProjectDir=${ClideProjectDir}/Templates
 #{
 export CodeProject="none"
 export ProjectMode="main"
+export ProjectDefaultType="Generic"
 export ProjectType="Generic"
 export RunTimeArgs=""
 export RunCplArgs="none"
