adding custom cli args in clide.conf; added piping methon in python; fixed imports in C++ program

--- a/var/clide.conf
+++ b/var/clide.conf
@@ -85,6 +85,16 @@ export NewPerl=newPerl
 export NewRuby=newRuby
 export NewRust=newRust
 
+export NewBashArgs=""
+export NewCppArgs="--random --write-file --read-file --cli --is-in --user-input --shell"
+export NewCArgs="--random --write-file --read-file --cli --is-in --user-input"
+export NewGoArgs="--random --write-file --read-file --cli --is-in --user-input"
+export NewJavaArgs="--shell --write-file --read-file --user-input --append-array"
+export NewPythonArgs="--cli --shell --write-file --read-file --os --random --pipe"
+export NewPerlArgs="--cli --shell --write-file --read-file --os --random"
+export NewRubyArgs="--cli --shell --write-file --read-file --os --random"
+export NewRustArgs="--cli --shell --write-file --read-file --os --random"
+
 #debuggers
 #C/C++
 export debugCandCpp=gdb
