"cl[ide] can now handle multiple users on one system"

--- a/var/clide.conf
+++ b/var/clide.conf
@@ -24,16 +24,18 @@ export repoAssist=True
 #root dir
 export ProgDir=~/Programs
 export ClideDir=${root}
+export ClideUserDir=~/.clide
 export ModesDir=${ClideDir}/modes
 export NotesDir=${ClideDir}/notes
 export LibDir=${ClideDir}/lib
 export VarDir=${ClideDir}/var
 export LangsDir=${ClideDir}/langs
 export NewCodeDir=${ClideDir}/newCode
+export ClideUserProjectDir=${ClideUserDir}/projects
 export ClideProjectDir=${ClideDir}/projects
-export ActiveProjectDir=${ClideProjectDir}/Active
-export ExportProjectDir=${ClideProjectDir}/Exports
-export ImportProjectDir=${ClideProjectDir}/Imports
+export ActiveProjectDir=${ClideUserProjectDir}/Active
+export ExportProjectDir=${ClideUserProjectDir}/Exports
+export ImportProjectDir=${ClideUserProjectDir}/Imports
 export TemplateProjectDir=${ClideProjectDir}/Templates
 
 #Global Vars (DO NOT CHANGE)
