"additional features; bug fixes; performance improvements; and more colors"

--- a/var/clide.conf
+++ b/var/clide.conf
@@ -24,16 +24,18 @@ export repoAssist=True
 #root dir
 export ProgDir=~/Programs
 export ClideDir=${root}
+export ClideUserDir=~/.clide
 export ModesDir=${ClideDir}/modes
 export NotesDir=${ClideDir}/notes
 export LibDir=${ClideDir}/lib
 export VarDir=${ClideDir}/var
 export LangsDir=${ClideDir}/langs
 export NewCodeDir=${ClideDir}/newCode
+export ClideUserProjectDir=${ClideUserDir}/projects
 export ClideProjectDir=${ClideDir}/projects
-export ActiveProjectDir=${ClideProjectDir}/Active
-export ExportProjectDir=${ClideProjectDir}/Exports
-export ImportProjectDir=${ClideProjectDir}/Imports
+export ActiveProjectDir=${ClideUserProjectDir}/Active
+export ExportProjectDir=${ClideUserProjectDir}/Exports
+export ImportProjectDir=${ClideUserProjectDir}/Imports
 export TemplateProjectDir=${ClideProjectDir}/Templates
 
 #Global Vars (DO NOT CHANGE)
@@ -84,6 +86,16 @@ export NewPython=newPython
 export NewPerl=newPerl
 export NewRuby=newRuby
 export NewRust=newRust
+
+export NewBashArgs=""
+export NewCppArgs="--random --write-file --read-file --cli --is-in --user-input --shell"
+export NewCArgs="--random --write-file --read-file --cli --is-in --user-input"
+export NewGoArgs="--random --write-file --read-file --cli --is-in --user-input"
+export NewJavaArgs="--shell --write-file --read-file --user-input --append-array"
+export NewPythonArgs="--cli --shell --write-file --read-file --os --random --pipe"
+export NewPerlArgs="--cli --shell --write-file --read-file --os --random"
+export NewRubyArgs="--cli --shell --write-file --read-file --os --random"
+export NewRustArgs="--cli --shell --write-file --read-file --os --random"
 
 #debuggers
 #C/C++
