"added debugger to Rust and Go"

--- a/var/clide.conf
+++ b/var/clide.conf
@@ -100,11 +100,17 @@ export NewRubyArgs="--cli --shell --write-file --read-file --os --random"
 export NewRustArgs="--cli --shell --write-file --read-file --os --random"
 
 #debuggers
+#{
 #C/C++
 export debugCandCpp=gdb
-#Python
-export debugPython=pdb
+#C/C++
+export debugGo=gdb
 #Java
 export debugJava=jdb
+#Python
+export debugPython=pdb
+#Rust
+export debugRust=gdb
+#}
 
 #}
