"enable unix piping in new C++ code template"

--- a/var/clide.conf
+++ b/var/clide.conf
@@ -90,7 +90,7 @@ export NewRuby=newRuby
 export NewRust=newRust
 
 export NewBashArgs=""
-export NewCppArgs="--random --write-file --read-file --cli --is-in --user-input --shell"
+export NewCppArgs="--random --write-file --read-file --cli --is-in --user-input --shell --pipe"
 export NewCArgs="--random --write-file --read-file --cli --is-in --user-input"
 export NewGoArgs="--random --write-file --read-file --cli --is-in --user-input"
 export NewJavaArgs="--shell --write-file --read-file --user-input --append-array --pipe"
