Introduced piping; performance improvements; separated clide sessions amongst users; bug fixes

--- a/var/clide.conf
+++ b/var/clide.conf
@@ -90,21 +90,27 @@ export NewRuby=newRuby
 export NewRust=newRust
 
 export NewBashArgs=""
-export NewCppArgs="--random --write-file --read-file --cli --is-in --user-input --shell"
+export NewCppArgs="--random --write-file --read-file --cli --is-in --user-input --shell --pipe"
 export NewCArgs="--random --write-file --read-file --cli --is-in --user-input"
 export NewGoArgs="--random --write-file --read-file --cli --is-in --user-input"
-export NewJavaArgs="--shell --write-file --read-file --user-input --append-array"
+export NewJavaArgs="--shell --write-file --read-file --user-input --append-array --pipe"
 export NewPythonArgs="--cli --shell --write-file --read-file --os --random --pipe"
 export NewPerlArgs="--cli --shell --write-file --read-file --os --random"
 export NewRubyArgs="--cli --shell --write-file --read-file --os --random"
 export NewRustArgs="--cli --shell --write-file --read-file --os --random"
 
 #debuggers
+#{
 #C/C++
 export debugCandCpp=gdb
-#Python
-export debugPython=pdb
+#C/C++
+export debugGo=gdb
 #Java
 export debugJava=jdb
+#Python
+export debugPython=pdb
+#Rust
+export debugRust=gdb
+#}
 
 #}
