--- a/var/clide.conf
+++ b/var/clide.conf
@@ -93,7 +93,7 @@ export NewBashArgs=""
 export NewCppArgs="--random --write-file --read-file --cli --is-in --user-input --shell --pipe"
 export NewCArgs="--random --write-file --read-file --cli --is-in --user-input"
 export NewGoArgs="--random --write-file --read-file --cli --is-in --user-input"
-export NewJavaArgs="--shell --write-file --read-file --user-input --append-array --pipe"
+export NewJavaArgs="--shell --write-file --read-file --user-input --append-array --pipe --prop"
 export NewPythonArgs="--cli --shell --write-file --read-file --os --random --pipe"
 export NewPerlArgs="--cli --shell --write-file --read-file --os --random"
 export NewRubyArgs="--cli --shell --write-file --read-file --os --random"
