"added php, language type function newPython for python3, bug fixes"

--- a/var/clide.conf
+++ b/var/clide.conf
@@ -62,6 +62,7 @@ export cplGo=go
 export cplJava=javac,java
 export cplPython=python
 export cplPerl=perl
+export cplPhp=php
 export cplRuby=ruby
 export cplRust=rustc
 #}
@@ -94,7 +95,7 @@ export NewCppArgs="--random --write-file --read-file --cli --is-in --user-input 
 export NewCArgs="--random --write-file --read-file --cli --is-in --user-input"
 export NewGoArgs="--random --write-file --read-file --cli --is-in --user-input"
 export NewJavaArgs="--shell --write-file --read-file --user-input --append-array --pipe --prop"
-export NewPythonArgs="--cli --shell --write-file --read-file --os --random --pipe"
+export NewPythonArgs="--random --write-file --read-file --cli --os --shell --pipe"
 export NewPerlArgs="--cli --shell --write-file --read-file --os --random"
 export NewRubyArgs="--cli --shell --write-file --read-file --os --random"
 export NewRustArgs="--cli --shell --write-file --read-file --os --random"
