--- a/var/clide.conf
+++ b/var/clide.conf
@@ -93,7 +93,7 @@ export NewRust=newRust
 export NewBashArgs=""
 export NewCppArgs="--random --write-file --read-file --cli --is-in --user-input --shell --pipe"
 export NewCArgs="--random --write-file --read-file --cli --is-in --user-input"
-export NewGoArgs="--random --write-file --read-file --cli --is-in --user-input"
+export NewGoArgs="--random --write-file --read-file --cli --is-in --user-input --main"
 export NewJavaArgs="--shell --write-file --read-file --user-input --append-array --pipe --prop"
 export NewPythonArgs="--random --write-file --read-file --cli --os --shell --pipe"
 export NewPerlArgs="--cli --shell --write-file --read-file --os --random"
