--- a/var/clide.conf
+++ b/var/clide.conf
@@ -93,12 +93,12 @@ export NewRust=newRust
 export NewBashArgs=""
 export NewCppArgs="--random --write-file --read-file --cli --is-in --user-input --shell --pipe"
 export NewCArgs="--random --write-file --read-file --cli --is-in --user-input"
-export NewGoArgs="--random --write-file --read-file --cli --is-in --user-input --main"
+export NewGoArgs="--random --write-file --read-file --cli --is-in --user-input"
 export NewJavaArgs="--shell --write-file --read-file --user-input --append-array --pipe --prop"
 export NewPythonArgs="--random --write-file --read-file --cli --os --shell --pipe"
-export NewPerlArgs="--cli --shell --write-file --read-file --os --random"
-export NewRubyArgs="--cli --shell --write-file --read-file --os --random"
-export NewRustArgs="--cli --shell --write-file --read-file --os --random"
+export NewPerlArgs="--cli --shell --write-file --read-file --os --random --is-in --user-input"
+export NewRubyArgs="--cli --shell --write-file --read-file --os --random --is-in --user-input"
+export NewRustArgs="--cli --shell --write-file --read-file --os --random --is-in --user-input"
 
 #debuggers
 #{
