--- a/var/clide.conf
+++ b/var/clide.conf
@@ -94,7 +94,7 @@ export NewBashArgs=""
 export NewCppArgs="--random --write-file --read-file --cli --is-in --user-input --shell --pipe"
 export NewCArgs="--random --write-file --read-file --cli --is-in --user-input"
 export NewGoArgs="--random --write-file --read-file --cli --is-in --user-input"
-export NewJavaArgs="--shell --write-file --read-file --user-input --append-array --pipe --prop"
+export NewJavaArgs="--shell --write-file --read-file --user-input --append-array --pipe --prop --get-length"
 export NewPythonArgs="--random --write-file --read-file --cli --os --shell --pipe"
 export NewPerlArgs="--cli --shell --write-file --read-file --os --random --is-in --user-input"
 export NewRubyArgs="--cli --shell --write-file --read-file --os --random --is-in --user-input"
