Updated template code: added piping Bug Fixes: piping to multiple programs Added: language notes

--- a/var/clide.conf
+++ b/var/clide.conf
@@ -27,6 +27,7 @@ export repoAssist=True
 export ProgDir=~/Programs
 export ClideDir=${root}
 export ClideUserDir=~/.clide
+export MultiPipeFile=${ClideUserDir}/.pipe
 export ModesDir=${ClideDir}/modes
 export NotesDir=${ClideDir}/notes
 export LibDir=${ClideDir}/lib
@@ -91,14 +92,14 @@ export NewRuby=newRuby
 export NewRust=newRust
 
 export NewBashArgs=""
-export NewCppArgs="--random --write-file --read-file --cli --is-in --user-input --shell --pipe"
-export NewCArgs="--random --write-file --read-file --cli --is-in --user-input"
-export NewGoArgs="--random --write-file --read-file --cli --is-in --user-input"
-export NewJavaArgs="--shell --write-file --read-file --user-input --append-array --pipe --prop --get-length"
-export NewPythonArgs="--random --write-file --read-file --cli --os --shell --pipe"
-export NewPerlArgs="--cli --shell --write-file --read-file --os --random --is-in --user-input"
-export NewRubyArgs="--cli --shell --write-file --read-file --os --random --is-in --user-input"
-export NewRustArgs="--cli --shell --write-file --read-file --os --random --is-in --user-input"
+export NewCppArgs="--random --write-file --read-file --cli --is-in --user-input --shell --pipe --thread --sleep"
+export NewCArgs="--random --write-file --read-file --cli --is-in --user-input --thread --sleep"
+export NewGoArgs="--random --write-file --read-file --cli --is-in --user-input --thread --sleep --pipe"
+export NewJavaArgs="--shell --write-file --read-file --user-input --append-array --pipe --prop --get-length --thread --sleep"
+export NewPythonArgs="--random --write-file --read-file --cli --os --shell --pipe --thread --sleep"
+export NewPerlArgs="--cli --shell --write-file --read-file --os --random --is-in --user-input --thread --sleep"
+export NewRubyArgs="--cli --shell --write-file --read-file --os --random --is-in --user-input --thread --sleep"
+export NewRustArgs="--cli --shell --write-file --read-file --os --random --is-in --user-input --thread --sleep --pipe"
 
 #debuggers
 #{
