added os shell and piping to newGo template

--- a/var/clide.conf
+++ b/var/clide.conf
@@ -94,7 +94,7 @@ export NewRust=newRust
 export NewBashArgs=""
 export NewCppArgs="--random --write-file --read-file --cli --is-in --user-input --shell --pipe --thread --sleep"
 export NewCArgs="--random --write-file --read-file --cli --is-in --user-input --thread --sleep"
-export NewGoArgs="--random --write-file --read-file --cli --is-in --user-input --thread --sleep --pipe"
+export NewGoArgs="--random --write-file --read-file --cli --is-in --user-input --thread --sleep --pipe --shell"
 export NewJavaArgs="--shell --write-file --read-file --user-input --append-array --pipe --prop --get-length --thread --sleep"
 export NewPythonArgs="--random --write-file --read-file --cli --os --shell --pipe --thread --sleep"
 export NewPerlArgs="--cli --shell --write-file --read-file --os --random --is-in --user-input --thread --sleep"
