--- a/var/clide.conf
+++ b/var/clide.conf
@@ -91,15 +91,15 @@ export NewPerl=newPerl
 export NewRuby=newRuby
 export NewRust=newRust
 
-export NewBashArgs=""
-export NewCppArgs="--random --write-file --read-file --cli --is-in --user-input --shell --pipe --thread --sleep"
-export NewCArgs="--random --write-file --read-file --cli --is-in --user-input --thread --sleep"
-export NewGoArgs="--random --write-file --read-file --cli --is-in --user-input --thread --sleep --pipe --shell"
-export NewJavaArgs="--shell --write-file --read-file --user-input --append-array --pipe --prop --get-length --thread --sleep"
-export NewPythonArgs="--random --write-file --read-file --cli --os --shell --pipe --thread --sleep"
-export NewPerlArgs="--cli --shell --write-file --read-file --os --random --is-in --user-input --thread --sleep"
-export NewRubyArgs="--cli --shell --write-file --read-file --os --random --is-in --user-input --thread --sleep"
-export NewRustArgs="--cli --shell --write-file --read-file --os --random --is-in --user-input --thread --sleep --pipe"
+export NewBashArgs="--random --pipe"
+export NewCppArgs="--random --write-file --read-file --cli --is-in --user-input --shell --pipe --prop --thread --sleep --split --join"
+export NewCArgs="--random --write-file --read-file --cli --is-in --user-input --thread --sleep --pipe --prop"
+export NewGoArgs="--random --write-file --read-file --cli --is-in --user-input --thread --sleep --pipe --prop --shell"
+export NewJavaArgs="--shell --write-file --read-file --user-input --append-array --pipe --prop --get-length --thread --sleep --split --join"
+export NewPythonArgs="--random --write-file --read-file --cli --os --shell --pipe --prop --thread --sleep"
+export NewPerlArgs="--cli --shell --write-file --read-file --os --random --is-in --user-input --thread --sleep --pipe --prop"
+export NewRubyArgs="--cli --shell --write-file --read-file --os --random --is-in --user-input --thread --sleep --pipe --prop"
+export NewRustArgs="--cli --shell --write-file --read-file --os --random --is-in --user-input --thread --sleep --pipe --prop"
 
 #debuggers
 #{
