--- a/var/clide.conf
+++ b/var/clide.conf
@@ -96,7 +96,7 @@ export NewCppArgs="--random --write-file --read-file --cli --is-in --user-input 
 export NewCArgs="--random --write-file --read-file --cli --is-in --user-input --thread --sleep --pipe --prop"
 export NewGoArgs="--random --write-file --read-file --cli --is-in --user-input --thread --sleep --pipe --prop --shell"
 export NewJavaArgs="--shell --write-file --read-file --user-input --append-array --pipe --prop --get-length --thread --sleep --split --join"
-export NewPythonArgs="--random --write-file --read-file --cli --os --shell --pipe --prop --thread --sleep"
+export NewPythonArgs="--random --write-file --read-file --cli --os --shell --pipe --prop --thread --sleep --split --join"
 export NewPerlArgs="--cli --shell --write-file --read-file --os --random --is-in --user-input --thread --sleep --pipe --prop"
 export NewRubyArgs="--cli --shell --write-file --read-file --os --random --is-in --user-input --thread --sleep --pipe --prop"
 export NewRustArgs="--cli --shell --write-file --read-file --os --random --is-in --user-input --thread --sleep --pipe --prop"
