--- a/var/clide.conf
+++ b/var/clide.conf
@@ -94,12 +94,12 @@ export NewRust=newRust
 export NewBashArgs="--random --pipe"
 export NewCppArgs="--random --write-file --read-file --cli --is-in --user-input --shell --pipe --prop --thread --sleep --split --join"
 export NewCArgs="--random --write-file --read-file --cli --is-in --user-input --thread --sleep --pipe --prop"
-export NewGoArgs="--random --write-file --read-file --cli --is-in --user-input --thread --sleep --pipe --prop --shell"
+export NewGoArgs="--random --write-file --read-file --cli --is-in --user-input --thread --sleep --pipe --prop --shell --split --join"
 export NewJavaArgs="--shell --write-file --read-file --user-input --append-array --pipe --prop --get-length --thread --sleep --split --join"
 export NewPythonArgs="--random --write-file --read-file --cli --os --shell --pipe --prop --thread --sleep --split --join"
 export NewPerlArgs="--cli --shell --write-file --read-file --os --random --is-in --user-input --thread --sleep --pipe --prop"
 export NewRubyArgs="--cli --shell --write-file --read-file --os --random --is-in --user-input --thread --sleep --pipe --prop"
-export NewRustArgs="--cli --shell --write-file --read-file --os --random --is-in --user-input --thread --sleep --pipe --prop"
+export NewRustArgs="--cli --shell --write-file --read-file --os --random --is-in --user-input --thread --sleep --pipe --prop --split --join"
 
 #debuggers
 #{
