Additional code template handling in the IDE (--cpl-ct, --edit-ct, --read-ct, --car-ct) Additional code template functions

--- a/var/clide.conf
+++ b/var/clide.conf
@@ -91,15 +91,15 @@ export NewPerl=newPerl
 export NewRuby=newRuby
 export NewRust=newRust
 
-export NewBashArgs="--random --pipe"
-export NewCppArgs="--random --write-file --read-file --cli --is-in --user-input --shell --pipe --prop --thread --sleep --split --join"
-export NewCArgs="--random --write-file --read-file --cli --is-in --user-input --thread --sleep --pipe --prop"
-export NewGoArgs="--random --write-file --read-file --cli --is-in --user-input --thread --sleep --pipe --prop --shell --split --join"
-export NewJavaArgs="--shell --write-file --read-file --user-input --append-array --pipe --prop --get-length --thread --sleep --split --join"
-export NewPythonArgs="--random --write-file --read-file --cli --os --shell --pipe --prop --thread --sleep --split --join"
-export NewPerlArgs="--cli --shell --write-file --read-file --os --random --is-in --user-input --thread --sleep --pipe --prop"
-export NewRubyArgs="--cli --shell --write-file --read-file --os --random --is-in --user-input --thread --sleep --pipe --prop"
-export NewRustArgs="--cli --shell --write-file --read-file --os --random --is-in --user-input --thread --sleep --pipe --prop --split --join"
+export NewBashArgs="--random --pipe --reverse"
+export NewCppArgs="--random --write-file --read-file --cli --is-in --user-input --shell --pipe --prop --thread --sleep --split --join --reverse"
+export NewCArgs="--random --write-file --read-file --cli --is-in --user-input --thread --sleep --pipe --prop --reverse"
+export NewGoArgs="--random --write-file --read-file --cli --is-in --user-input --thread --sleep --pipe --prop --shell --split --join --reverse"
+export NewJavaArgs="--shell --write-file --read-file --user-input --append-array --pipe --prop --get-length --thread --sleep --split --join --cli --reverse"
+export NewPythonArgs="--random --write-file --read-file --cli --os --shell --pipe --prop --thread --sleep --split --join --reverse"
+export NewPerlArgs="--cli --shell --write-file --read-file --os --random --is-in --user-input --thread --sleep --pipe --prop --reverse"
+export NewRubyArgs="--cli --shell --write-file --read-file --os --random --is-in --user-input --thread --sleep --pipe --prop --reverse"
+export NewRustArgs="--cli --shell --write-file --read-file --os --random --is-in --user-input --thread --sleep --pipe --prop --split --join --reverse"
 
 #debuggers
 #{
