--- a/var/clide.conf
+++ b/var/clide.conf
@@ -92,7 +92,7 @@ export NewRuby=newRuby
 export NewRust=newRust
 
 export NewBashArgs="--random --pipe --reverse"
-export NewCppArgs="--random --write-file --read-file --cli --is-in --user-input --shell --pipe --prop --thread --sleep --split --join --reverse"
+export NewCppArgs="--random --write-file --read-file --cli --is-in --user-input --shell --pipe --prop --thread --sleep --split --join --reverse --vectors"
 export NewCArgs="--random --write-file --read-file --cli --is-in --user-input --thread --sleep --pipe --prop --reverse"
 export NewGoArgs="--random --write-file --read-file --cli --is-in --user-input --thread --sleep --pipe --prop --shell --split --join --reverse"
 export NewJavaArgs="--shell --write-file --read-file --user-input --append-array --pipe --prop --get-length --thread --sleep --split --join --cli --reverse"
