--- a/var/clide.conf
+++ b/var/clide.conf
@@ -92,11 +92,11 @@ export NewRuby=newRuby
 export NewRust=newRust
 
 export NewBashArgs="--random --pipe --reverse"
-export NewCppArgs="--random --write-file --read-file --cli --is-in --user-input --shell --pipe --prop --thread --sleep --split --join --reverse --vectors --get-length --convert --sub-string"
+export NewCppArgs="--random --write-file --read-file --cli --is-in --user-input --shell --pipe --prop --thread --sleep --split --join --reverse --vectors --get-length --convert --sub-string --upper --lower"
 export NewCArgs="--random --write-file --read-file --cli --is-in --user-input --thread --sleep --pipe --prop --reverse --convert --sub-string"
-export NewGoArgs="--random --write-file --read-file --cli --is-in --user-input --thread --sleep --pipe --prop --shell --split --join --reverse --convert --sub-string"
-export NewJavaArgs="--shell --write-file --read-file --user-input --append-array --pipe --prop --get-length --thread --sleep --split --join --cli --reverse --convert --sub-string"
-export NewPythonArgs="--random --write-file --read-file --cli --os --shell --pipe --prop --thread --sleep --split --join --reverse --convert --sub-string"
+export NewGoArgs="--random --write-file --read-file --cli --is-in --user-input --thread --sleep --pipe --prop --shell --split --join --reverse --convert --sub-string --upper --lower"
+export NewJavaArgs="--shell --write-file --read-file --user-input --append-array --pipe --prop --get-length --thread --sleep --split --join --cli --reverse --convert --sub-string --upper --lower"
+export NewPythonArgs="--random --write-file --read-file --cli --os --shell --pipe --prop --thread --sleep --split --join --reverse --convert --sub-string --user-input --upper --lower"
 export NewPerlArgs="--cli --shell --write-file --read-file --os --random --is-in --user-input --thread --sleep --pipe --prop --reverse --convert --sub-string"
 export NewRubyArgs="--cli --shell --write-file --read-file --os --random --is-in --user-input --thread --sleep --pipe --prop --reverse --convert --sub-string"
 export NewRustArgs="--cli --shell --write-file --read-file --os --random --is-in --user-input --thread --sleep --pipe --prop --split --join --reverse --convert --sub-string"
