--- a/var/clide.conf
+++ b/var/clide.conf
@@ -92,14 +92,14 @@ export NewRuby=newRuby
 export NewRust=newRust
 
 export NewBashArgs="--random --pipe --reverse"
-export NewCppArgs="--random --write-file --read-file --cli --is-in --user-input --shell --pipe --prop --thread --sleep --split --join --reverse --vectors --get-length --convert --sub-string --upper --lower"
+export NewCppArgs="--cli --main --prop --pipe --shell --reverse --split --join --random --check-file --write-file --read-file --is-in --user-input --vectors --thread --sleep --get-length --casting --sub-string --upper --lower --math --files"
 export NewCArgs="--random --write-file --read-file --cli --is-in --user-input --thread --sleep --pipe --prop --reverse --convert --sub-string"
-export NewGoArgs="--random --write-file --read-file --cli --is-in --user-input --thread --sleep --pipe --prop --shell --split --join --reverse --convert --sub-string --upper --lower"
-export NewJavaArgs="--shell --write-file --read-file --user-input --append-array --pipe --prop --get-length --thread --sleep --split --join --cli --reverse --convert --sub-string --upper --lower"
-export NewPythonArgs="--random --write-file --read-file --cli --os --shell --pipe --prop --thread --sleep --split --join --reverse --convert --sub-string --user-input --upper --lower"
+export NewGoArgs="--cli --main --prop --pipe --shell --reverse --split --join --random --check-file --write-file --read-file --is-in --user-input --thread --sleep --get-length --casting --sub-string --type --upper --lower --math"
+export NewJavaArgs="--cli --main --prop --pipe --reverse --split --join --random --shell --check-file --write-file --is-in --read-file --user-input --append-array --thread --type --sleep --get-length --casting --sub-string --upper --lower --math"
+export NewPythonArgs="--cli --main --prop --pipe --shell --reverse --split --join --random --check-file --write-file --read-file --user-input --thread --type --sleep --get-length --upper --lower --math"
 export NewPerlArgs="--cli --shell --write-file --read-file --os --random --is-in --user-input --thread --sleep --pipe --prop --reverse --convert --sub-string"
 export NewRubyArgs="--cli --shell --write-file --read-file --os --random --is-in --user-input --thread --sleep --pipe --prop --reverse --convert --sub-string"
-export NewRustArgs="--cli --shell --write-file --read-file --os --random --is-in --user-input --thread --sleep --pipe --prop --split --join --reverse --convert --sub-string"
+export NewRustArgs="--cli --main --prop --reverse --pipe --random --check-file --write-file --read-file --user-input --split --join --is-in --thread --sleep --get-length --upper --lower"
 
 #debuggers
 #{
