"Additional features and bug fixes"

--- a/var/clide.conf
+++ b/var/clide.conf
@@ -57,8 +57,8 @@ export RunCplArgs="none"
 #<Lang>=<intepreter>
 #<Lang>=<compiler>,<intepreter>
 export cplBash=bash
-export cplCpp=g++
-export cplC=gcc
+export cplCpp=clang++
+export cplC=clang
 export cplGo=go
 export cplJava=javac,java
 export cplPython=python3
