"Additional features: adding shell code for each language; adding more to clide desktop shortcut"

--- a/var/clide.conf
+++ b/var/clide.conf
@@ -33,6 +33,7 @@ export NotesDir=${ClideDir}/notes
 export LibDir=${ClideDir}/lib
 export VarDir=${ClideDir}/var
 export LangsDir=${ClideDir}/langs
+export ShellsDir=${ClideDir}/shell
 export NewCodeDir=${ClideDir}/newCode
 export ClideUserProjectDir=${ClideUserDir}/projects
 export ClideProjectDir=${ClideDir}/projects
