removed python2.7 code template; additional changes in support and stability

--- a/etc/clide.conf
+++ b/etc/clide.conf
@@ -58,8 +58,8 @@ export RunCplArgs="none"
 #<Lang>=<intepreter>
 #<Lang>=<compiler>,<intepreter>
 export cplBash=bash
-export cplCpp=g++
-export cplC=gcc
+export cplCpp=clang++
+export cplC=clang
 export cplGo=go
 export cplJava=javac,java
 export cplPython=python3
@@ -97,7 +97,7 @@ export NewCppArgs="--cli --main --prop --pipe --shell --reverse --split --join -
 export NewCArgs="--random --write-file --read-file --cli --is-in --user-input --thread --sleep --pipe --prop --reverse --convert --sub-string"
 export NewGoArgs="--cli --main --prop --pipe --shell --reverse --split --join --random --check-file --write-file --read-file --is-in --user-input --thread --sleep --get-length --casting --sub-string --type --upper --lower --math"
 export NewJavaArgs="--cli --main --prop --pipe --reverse --split --join --random --shell --check-file --write-file --is-in --read-file --user-input --append-array --thread --type --sleep --get-length --casting --sub-string --upper --lower --math"
-export NewPythonArgs="--cli --main --prop --pipe --shell --reverse --split --join --random --check-file --write-file --read-file --user-input --thread --type --sleep --get-length --upper --lower --math"
+export NewPythonArgs="--cli --main --prop --pipe --shell --reverse --split --join --random --check-file --write-file --read-file --user-input --thread --type --sleep --get-length --upper --lower --math --web --bs4 --json"
 export NewPerlArgs="--cli --shell --write-file --read-file --os --random --is-in --user-input --thread --sleep --pipe --prop --reverse --convert --sub-string"
 export NewRubyArgs="--cli --shell --write-file --read-file --os --random --is-in --user-input --thread --sleep --pipe --prop --reverse --convert --sub-string"
 export NewRustArgs="--cli --main --prop --reverse --pipe --random --check-file --write-file --read-file --user-input --split --join --is-in --thread --sleep --get-length --upper --lower"
