additional code template and bugfixes for C++ and Java Shell code

--- a/etc/clide.conf
+++ b/etc/clide.conf
@@ -93,14 +93,14 @@ export NewRuby=newRuby
 export NewRust=newRust
 
 export NewBashArgs="--random --pipe --reverse"
-export NewCppArgs="--cli --main --prop --pipe --shell --reverse --split --join --random --check-file --write-file --read-file --is-in --user-input --vectors --thread --sleep --get-length --casting --sub-string --upper --lower --math --files"
-export NewCArgs="--random --write-file --read-file --cli --is-in --user-input --thread --sleep --pipe --prop --reverse --convert --sub-string"
-export NewGoArgs="--cli --main --prop --pipe --shell --reverse --split --join --random --check-file --write-file --read-file --is-in --user-input --thread --sleep --get-length --casting --sub-string --type --upper --lower --math"
-export NewJavaArgs="--cli --main --prop --pipe --reverse --split --join --random --shell --check-file --write-file --is-in --read-file --user-input --append-array --thread --type --sleep --get-length --casting --sub-string --upper --lower --math"
-export NewPythonArgs="--cli --main --prop --pipe --shell --reverse --split --join --random --check-file --write-file --read-file --user-input --thread --type --sleep --get-length --upper --lower --math --web --bs4 --json"
-export NewPerlArgs="--cli --shell --write-file --read-file --os --random --is-in --user-input --thread --sleep --pipe --prop --reverse --convert --sub-string"
-export NewRubyArgs="--cli --shell --write-file --read-file --os --random --is-in --user-input --thread --sleep --pipe --prop --reverse --convert --sub-string"
-export NewRustArgs="--cli --main --prop --reverse --pipe --random --check-file --write-file --read-file --user-input --split --join --is-in --thread --sleep --get-length --upper --lower"
+export NewCppArgs="--cli --main --prop --pipe --shell --reverse --split --join --random --user-input --vectors --thread --sleep --get-length --casting --sub-string --upper --lower --math --files"
+export NewCArgs="--random --cli --user-input --thread --sleep --pipe --prop --reverse --convert --sub-string --files"
+export NewGoArgs="--cli --main --prop --pipe --shell --reverse --split --join --random  --user-input --thread --sleep --get-length --casting --sub-string --type --upper --lower --math --files"
+export NewJavaArgs="--cli --main --prop --pipe --reverse --split --join --random --shell --user-input --append-array --thread --type --sleep --get-length --casting --sub-string --upper --lower --math --files"
+export NewPythonArgs="--cli --main --prop --pipe --shell --reverse --split --join --random  --user-input --thread --type --sleep --get-length --upper --lower --math --web --bs4 --json --files"
+export NewPerlArgs="--cli --shell --os --random --user-input --thread --sleep --pipe --prop --reverse --convert --sub-string --files"
+export NewRubyArgs="--cli --shell --os --random --user-input --thread --sleep --pipe --prop --reverse --convert --sub-string --files"
+export NewRustArgs="--cli --main --prop --reverse --pipe --random --user-input --split --join --thread --sleep --get-length --upper --lower --files"
 
 #debuggers
 #{
