improved performance for shell code, code templates, and help page

--- a/etc/clide.conf
+++ b/etc/clide.conf
@@ -11,6 +11,7 @@ export BKTcolor=4
 #cl[ide] config
 #{
 export editor=nano
+#export editor=vi
 export ReadBy=less
 export repoTool=git
 #export repoTool=svn
@@ -57,15 +58,37 @@ export RunCplArgs="none"
 #<Lang>=<compiler>
 #<Lang>=<intepreter>
 #<Lang>=<compiler>,<intepreter>
+
+#----[Bash]----
 export cplBash=bash
+
+#----[C++]----
 export cplCpp=clang++
+#export cplCpp=g++
+
+#----[C]----
 export cplC=clang
+#export cplC=gcc
+
+#----[Go]----
 export cplGo=go
+
+#----[Java]----
 export cplJava=javac,java
+
+#----[Python]----
 export cplPython=python3
+
+#----[Perl]----
 export cplPerl=perl
+
+#----[Php]----
 export cplPhp=php
+
+#----[Ruby]----
 export cplRuby=ruby
+
+#----[Rust]----
 export cplRust=rustc
 #}
 
@@ -82,24 +105,40 @@ export cplRust=rustc
 #Code Template
 #MUST be compiled by clide
 #extensions are optional
+#----[Bash]----
 export NewBash=newBash
-export NewCpp=newC++
-export NewC=newC
-export NewGo=newGo
-export NewJava=newJava
-export NewPython=newPython3
-export NewPerl=newPerl
-export NewRuby=newRuby
-export NewRust=newRust
-
 export NewBashArgs="--random --pipe --reverse"
+
+#----[C++]----
+export NewCpp=newC++
 export NewCppArgs="--cli --main --prop --pipe --shell --reverse --split --join --random --user-input --vectors --thread --sleep --get-length --casting --sub-string --upper --lower --math --files"
+
+#----[C]----
+export NewC=newC
 export NewCArgs="--random --cli --user-input --thread --sleep --pipe --prop --reverse --convert --sub-string --files"
+
+#----[Go]----
+export NewGo=newGo
 export NewGoArgs="--cli --main --prop --pipe --shell --reverse --split --join --random  --user-input --thread --sleep --get-length --casting --sub-string --type --upper --lower --math --files"
+
+#----[Java]----
+export NewJava=newJava
 export NewJavaArgs="--cli --main --prop --pipe --reverse --split --join --random --shell --user-input --append-array --thread --type --sleep --get-length --casting --sub-string --upper --lower --math --files"
+
+#----[Python]----
+export NewPython=newPython3
 export NewPythonArgs="--cli --main --prop --pipe --shell --reverse --split --join --random  --user-input --thread --type --sleep --get-length --upper --lower --math --web --bs4 --json --files"
+
+#----[Perl]----
+export NewPerl=newPerl
 export NewPerlArgs="--cli --shell --os --random --user-input --thread --sleep --pipe --prop --reverse --convert --sub-string --files"
+
+#----[Ruby]----
+export NewRuby=newRuby
 export NewRubyArgs="--cli --shell --os --random --user-input --thread --sleep --pipe --prop --reverse --convert --sub-string --files"
+
+#----[Rust]----
+export NewRust=newRust
 export NewRustArgs="--cli --main --prop --reverse --pipe --random --user-input --split --join --thread --sleep --get-length --upper --lower --files"
 
 #debuggers
