moving pipe data to /tmp (ram only) for testing multiple programs with piping

--- a/etc/clide.conf
+++ b/etc/clide.conf
@@ -28,7 +28,7 @@ export repoAssist=True
 export ProgDir=~/Programs
 export ClideDir=${root}
 export ClideUserDir=~/.clide
-export MultiPipeFile=${ClideUserDir}/.pipe
+export MultiPipeFile=/tmp/.pipe
 export ModesDir=${ClideDir}/modes
 export NotesDir=${ClideDir}/notes
 export LibDir=${ClideDir}/lib
