catching Java shell code up with C++ shell code

--- a/etc/clide.conf
+++ b/etc/clide.conf
@@ -12,7 +12,7 @@ export BKTcolor=4
 #{
 export editor=nano
 #export editor=vi
-#export ReadBy=less
+export ReadBy=less
 export repoTool=git
 #export repoTool=svn
 
