--- a/etc/clide.conf
+++ b/etc/clide.conf
@@ -12,7 +12,7 @@ export BKTcolor=4
 #{
 export editor=nano
 #export editor=vi
-#export ReadBy=less
+export ReadBy=less
 export repoTool=git
 #export repoTool=svn
 
@@ -28,7 +28,7 @@ export repoAssist=True
 export ProgDir=~/Programs
 export ClideDir=${root}
 export ClideUserDir=~/.clide
-export MultiPipeFile=${ClideUserDir}/.pipe
+export MultiPipeFile=/tmp/.pipe
 export ModesDir=${ClideDir}/modes
 export NotesDir=${ClideDir}/notes
 export LibDir=${ClideDir}/lib
